2007-07-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: only show an error dialog if being
	called interactively.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: removed drawable parameter which was
	ignored anyway.

	* plug-ins/print/print-draw-page.c (draw_page_cairo): reverted
	last change. Instead reimplemented the drawing to fetch the pixels
	directly into the cairo image surface.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c (draw_page_cairo): push a group
	around the image surface fills. This seems to get rid of the white
	stripes in the output.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (run): always call gimp_ui_init(), we need
	funtionality from GTK+, even if called non-interactively.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/progress.pdb: added new procedure gimp-progress-end.

	* app/pdb/progress_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpprogress_pdb.[ch]: regenerated.

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-settings.[ch]: end the progress and save
	the settings from the "end-print" handler. The plug-in then
	appears finished but keeps running in the background until it has
	finished the print operation.

2007-07-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: delete the export image from the
	"end-print" handler.

2007-07-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_set_active_modifier_state):
	don't have the tool release ALT when the user releases CONTROL.
	Fixes another stuck modifier instance and other modifier
	weirdness.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.20.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* Made 2.3.19 development release.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: string changes.

2007-07-24  Sven Neumann  <sven@gimp.org>

	* authors.xml: added Stefan Röllin.
