@@ -1,3 +1,9 @@
+2007-07-26  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/print/print-page-layout.c
+	* plug-ins/print/print-settings.c: applied patch from Stefan
+	Röllin to save and restore the use-full-page setting (bug #387604).
+
 2007-07-25  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/print/print.c: only show an error dialog if being
